--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+@import url("https://fonts.googleapis.com/css2?family=Jost:wght@400;600;700&display=swap");
+/*  font-family: 'Jost', sans-serif;  */
+
 * {
     margin: 0;
     padding: 0;
@@ -12,9 +15,7 @@ body {
     min-height: 100%;
     background: #f7f8fd;
     margin: 0;
-    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
-        "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans",
-        "Helvetica Neue", sans-serif;
+    font-family: "Jost", sans-serif;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
 }
