--- a/src/components/UI/FeatureButton/FeatureButton.module.css
+++ b/src/components/UI/FeatureButton/FeatureButton.module.css
@@ -1,6 +1,8 @@
 .button {
-    width: fit-content;
-    padding: 15px 6px;
+    min-width: 48px;
+    padding: 15px 14px;
+    margin-top: 8px;
+    margin-right: 8px;
     background: #f2f4ff;
     border: 0px;
     border-radius: 10px;
