Finish 80% of the UI 	- Main Forms are next

--- a/src/components/FeaturesBoard/FeaturesBoard.module.css
+++ b/src/components/FeaturesBoard/FeaturesBoard.module.css
@@ -5,6 +5,7 @@
     padding-left: 24px;
     padding-right: 50px;
     padding-bottom: 24px;
+    margin-bottom: 24px;
     background: #ffffff;
     border-radius: 10px;
 }
