--- a/src/components/UI/Button/Button.module.css
+++ b/src/components/UI/Button/Button.module.css
@@ -5,6 +5,7 @@
     line-height: 20px;
     text-align: center;
     border-radius: 10px;
+    border: none;
     color: #f2f4fe;
     padding: 13px 55px;
 }
