--- a/src/components/UI/DropDown/DropDown.module.css
+++ b/src/components/UI/DropDown/DropDown.module.css
@@ -31,7 +31,7 @@
     border-radius: 10px;
     min-width: 255px;
     margin-top: 16px;
-    /* display: none; */
+    display: none;
     overflow: auto;
     z-index: 1;
 }
@@ -56,4 +56,8 @@
 
 .dropdown a:hover {
     background-color: #ddd;
+}
+
+.icon path {
+    stroke: #ffffff;
 }
